--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                 <li><a href="#services" class="nav-link" data-en="Services" data-hi="सेवाएं">Services</a></li>
                 <li><a href="#tools" class="nav-link" data-en="Tools" data-hi="टूल्स">Tools</a></li>
                 <li><a href="#contact" class="nav-link" data-en="Contact" data-hi="संपर्क">Contact</a></li>
+                <li class="nav-auth-item">
+                    <a href="login.html" class="btn-login" data-en="Login" data-hi="लॉगिन">Login</a>
+                    <a href="signup.html" class="btn-signup" data-en="Signup" data-hi="साइन अप">Signup</a>
+                </li>
             </ul>
-            <div class="auth-buttons">
-                <a href="login.html" class="btn-login" data-en="Login" data-hi="लॉगिन">Login</a>
-                <a href="signup.html" class="btn-signup" data-en="Signup" data-hi="साइन अप">Signup</a>
-            </div>
             <div class="hamburger">
                 <span></span>
                 <span></span>
@@ -140,7 +140,7 @@
             </div>
 
             <div class="hero-buttons">
-                <button class="btn btn-primary" onclick="openModal('bookingModal')">
+                <button class="btn btn-primary" onclick="window.location.href='signup.html'">
                     <i class="fas fa-calendar-check"></i> Book Repair Now
                 </button>
                 <a href="tel:+918287884969" class="btn btn-secondary">
