--- a/index.html
+++ b/index.html
@@ -993,8 +993,8 @@
                         </div>
                         <div class="contact-details">
                             <h3>Email Us</h3>
-                            <p>info@harshitsolutions.com</p>
-                            <p>support@harshitsolutions.com</p>
+                            <p>info@harshit.site</p>
+                            <p>info@harshit.site</p>
                         </div>
                     </div>
 
@@ -1111,7 +1111,7 @@
                     <h3>Contact Info</h3>
                     <div class="footer-contact">
                         <p><i class="fas fa-phone"></i> +91 8287884969</p>
-                        <p><i class="fas fa-envelope"></i> info@harshitsolutions.com</p>
+                        <p><i class="fas fa-envelope"></i> info@harshit.site</p>
                         <p><i class="fas fa-map-marker-alt"></i> Gali Number 3 Near Hanuman Mandir Fanne Khan Mod North
                             East Delhi 110093</p>
                         <p><i class="fas fa-clock"></i> Mon-Sat: 10AM-6PM</p>
