--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
                         <div class="step">
                             <div class="step-number">1</div>
                             <h4>Contact Us</h4>
-                            <p>Call +91 8287884969 or visit our shop with your device and receipt</p>
+                            <p>Call +91 8375084969 or visit our shop with your device and receipt</p>
                         </div>
                         <div class="step">
                             <div class="step-number">2</div>
@@ -1096,7 +1096,7 @@
                         </div>
                         <div class="contact-details">
                             <h3>Call Us</h3>
-                            <p>+91 8287884969</p>
+                            <p>+91 8375084969</p>
                         </div>
                     </div>
 
@@ -1106,7 +1106,6 @@
                         </div>
                         <div class="contact-details">
                             <h3>Email Us</h3>
-                            <p>info@harshit.site</p>
                             <p>info@harshit.site</p>
                         </div>
                     </div>
@@ -1233,7 +1232,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2024 Harsh IT Solutions | All rights reserved | Version v1.0.0</p>
+                <p>&copy; 2024 Harsh IT Solutions | All rights reserved | Version v1.0.0 | Made With ❣️ By Harsh Rana</p>
             </div>
         </div>
     </footer>
