--- a/login.html
+++ b/login.html
@@ -6,69 +6,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Harsh IT Solutions</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="professional-logo.css">
+    <script src="advanced-security.js"></script>
+    <script src="signup-security.js"></script>
     <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            font-family: 'Poppins', sans-serif;
+        }
+        
         .auth-section {
-            min-height: 100vh;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            display: flex;
+            display: flex !important;
             align-items: center;
             justify-content: center;
-            padding: 20px;
         }
 
         .auth-container {
-            background: var(--bg-card);
-            border-radius: 20px;
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 25px;
+            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(255, 255, 255, 0.2);
+            width: 90vw;
+            max-width: 420px;
+            max-height: 90vh;
             overflow: hidden;
-            width: 100%;
-            max-width: 900px;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            min-height: 600px;
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         .auth-form {
-            padding: 60px 40px;
+            padding: 30px;
             display: flex;
             flex-direction: column;
             justify-content: center;
-        }
-
-        .auth-info {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 60px 40px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
+            align-items: center;
             text-align: center;
+            min-height: 100%;
+            max-height: 90vh;
+            overflow: hidden;
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
+            width: 100%;
         }
 
         .form-group label {
             display: block;
-            margin-bottom: 8px;
-            font-weight: 500;
-            color: var(--text-primary);
+            margin-bottom: 6px;
+            font-weight: 600;
+            color: #1e293b;
+            font-size: 0.85rem;
+            text-align: left;
         }
 
         .form-group input {
             width: 100%;
-            padding: 15px;
-            border: 2px solid var(--border-color);
-            border-radius: 10px;
-            font-size: 1rem;
+            padding: 12px 16px;
+            border: 2px solid #e2e8f0;
+            border-radius: 12px;
+            font-size: 0.9rem;
             transition: all 0.3s ease;
+            box-sizing: border-box;
+            background: rgba(255, 255, 255, 0.8);
+            color: #1e293b;
         }
 
         .form-group input:focus {
             outline: none;
-            border-color: var(--primary-color);
+            border-color: #3b82f6;
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+            background: rgba(255, 255, 255, 1);
         }
 
         .form-group input.error {
@@ -90,78 +106,47 @@
 
         .auth-btn {
             width: 100%;
-            padding: 15px;
-            background: var(--gradient-primary);
+            padding: 14px;
+            background: linear-gradient(135deg, #3b82f6, #1e40af);
             color: white;
             border: none;
-            border-radius: 10px;
-            font-size: 1rem;
+            border-radius: 12px;
+            font-size: 0.95rem;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
-            margin-bottom: 20px;
+            margin: 20px 0 15px 0;
+            box-sizing: border-box;
+            box-shadow: 0 4px 15px rgba(59, 130, 246, 0.3);
         }
 
         .auth-btn:hover {
             transform: translateY(-2px);
-            box-shadow: var(--shadow-lg);
+            box-shadow: 0 8px 25px rgba(59, 130, 246, 0.4);
         }
 
-        .forgot-link,
         .signup-link {
             text-align: center;
-            color: var(--primary-color);
+            color: #3b82f6;
             text-decoration: none;
-            font-size: 0.9rem;
-            margin-bottom: 10px;
-            display: block;
+            font-size: 0.85rem;
+            font-weight: 500;
         }
 
-        .brand-logo {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-            font-size: 2rem;
-            font-weight: 700;
-            margin-bottom: 20px;
-        }
-
-        .info-features {
-            list-style: none;
-            margin: 30px 0;
-        }
-
-        .info-features li {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-bottom: 15px;
-            font-size: 1.1rem;
+        .signup-link:hover {
+            color: #1e40af;
+            text-decoration: underline;
         }
 
         @media (max-width: 768px) {
-            .auth-section {
-                padding: 10px;
-                align-items: flex-start;
-                /* Better for scrolling on small screens */
-            }
-
             .auth-container {
-                grid-template-columns: 1fr;
-                margin-top: 20px;
-                margin-bottom: 20px;
-            }
-
-            .auth-info {
-                /* order: -1; Removed to keep form at top */
-                padding: 30px 20px;
-                border-radius: 0 0 20px 20px;
+                width: 90vw;
+                max-width: 350px;
+                margin: 0 20px;
             }
 
             .auth-form {
-                padding: 30px 20px;
-                border-radius: 20px 20px 0 0;
+                padding: 25px 20px;
             }
         }
     </style>
@@ -171,48 +156,43 @@
     <section class="auth-section">
         <div class="auth-container">
             <div class="auth-form">
-                <h2>Welcome Back!</h2>
-                <p style="color: var(--text-secondary); margin-bottom: 30px;">Sign in to access your repair history</p>
+                <div style="text-align: center; margin-bottom: 16px;">
+                    <div class="logo-container" style="justify-content: center;">
+                        <div class="logo-icon">
+                            <div class="chip-design">
+                                <div class="chip-core"></div>
+                                <div class="chip-pins"></div>
+                            </div>
+                            <div class="logo-accent">⚡</div>
+                        </div>
+                        <div>
+                            <div class="brand-name" style="font-size: 1.2rem;">HARSH</div>
+                            <div class="brand-suffix" style="font-size: 0.7rem;">IT SOLUTIONS</div>
+                        </div>
+                    </div>
+                </div>
+                <h2 style="margin-bottom: 6px; font-size: 1.4rem; text-align: center; color: #1e293b; font-weight: 700;">Welcome Back</h2>
+                <p style="color: #64748b; margin-bottom: 25px; font-size: 0.85rem; text-align: center;">Sign in to your account</p>
 
-                <form onsubmit="handleLogin(event)">
+                <form onsubmit="handleLogin(event)" autocomplete="off">
                     <div class="form-group">
-                        <label>Email or Phone</label>
-                        <input type="text" name="email" id="loginEmail" placeholder="Enter email or phone number"
-                            required>
+                        <label>Email Address</label>
+                        <input type="email" name="email" id="loginEmail" placeholder="Enter email address" required autocomplete="off">
                         <div class="error-message" id="loginEmailError"></div>
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" name="password" id="loginPassword" placeholder="Enter your password"
-                            required>
+                        <input type="password" name="password" id="loginPassword" placeholder="Enter password" required autocomplete="off">
                         <div class="error-message" id="loginPasswordError"></div>
                     </div>
                     <button type="submit" class="auth-btn" id="loginBtn">
-                        <i class="fas fa-sign-in-alt"></i> Login
+                        <i class="fas fa-sign-in-alt"></i> Sign In
                     </button>
                 </form>
-                <a href="#" class="forgot-link">Forgot Password?</a>
-                <a href="signup.html" class="signup-link">Don't have an account? Sign up here</a>
-            </div>
-
-            <div class="auth-info">
-                <div class="brand-logo">
-                    <i class="fas fa-microchip"></i>
-                    <span>Harsh IT Solutions</span>
-                </div>
-                <h3>Professional IT Services</h3>
-                <p>Access your customer portal to track repairs, view history, and manage your profile.</p>
-
-                <ul class="info-features">
-                    <li><i class="fas fa-search"></i> Track repair status</li>
-                    <li><i class="fas fa-history"></i> View service history</li>
-                    <li><i class="fas fa-file-invoice"></i> Download invoices</li>
-                    <li><i class="fas fa-calendar"></i> Book new services</li>
-                    <li><i class="fas fa-user-cog"></i> Manage profile</li>
-                </ul>
-
-                <div style="margin-top: 30px;">
-                    <a href="index.html" style="color: white; text-decoration: none;">
+                <a href="signup.html" class="signup-link">Don't have an account? Create one here</a>
+                
+                <div style="text-align: center; margin-top: 10px;">
+                    <a href="index.html" style="color: #3b82f6; text-decoration: none; font-size: 0.8rem; font-weight: 500;">
                         <i class="fas fa-arrow-left"></i> Back to Website
                     </a>
                 </div>
@@ -224,11 +204,6 @@
         function validateEmail(email) {
             const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
             return emailRegex.test(email);
-        }
-
-        function validatePhone(phone) {
-            const phoneRegex = /^[6-9]\d{9}$/;
-            return phoneRegex.test(phone.replace(/\D/g, ''));
         }
 
         function showError(fieldId, message) {
@@ -248,6 +223,36 @@
             errorDiv.style.display = 'none';
         }
 
+        function clearValidation(fieldId) {
+            const field = document.getElementById(fieldId);
+            const errorDiv = document.getElementById(fieldId + 'Error');
+            field.classList.remove('error', 'success');
+            errorDiv.style.display = 'none';
+        }
+
+        // Real-time validation
+        document.getElementById('loginEmail').addEventListener('input', function () {
+            const email = this.value;
+            if (email.length === 0) {
+                clearValidation('loginEmail');
+            } else if (validateEmail(email)) {
+                showSuccess('loginEmail');
+            } else {
+                showError('loginEmail', 'Enter a valid email address');
+            }
+        });
+
+        document.getElementById('loginPassword').addEventListener('input', function () {
+            const password = this.value;
+            if (password.length === 0) {
+                clearValidation('loginPassword');
+            } else if (password.length >= 6) {
+                showSuccess('loginPassword');
+            } else {
+                showError('loginPassword', 'Password must be at least 6 characters');
+            }
+        });
+
         function handleLogin(event) {
             event.preventDefault();
             const formData = new FormData(event.target);
@@ -256,45 +261,34 @@
 
             let isValid = true;
 
-            if (!email) {
-                showError('loginEmail', 'Email or phone is required');
+            if (!validateEmail(email)) {
+                showError('loginEmail', 'Enter a valid email address');
                 isValid = false;
-            } else if (!validateEmail(email) && !validatePhone(email)) {
-                showError('loginEmail', 'Enter valid email or phone number');
-                isValid = false;
-            } else {
-                showSuccess('loginEmail');
             }
 
-            if (!password) {
-                showError('loginPassword', 'Password is required');
-                isValid = false;
-            } else if (password.length < 6) {
+            if (password.length < 6) {
                 showError('loginPassword', 'Password must be at least 6 characters');
                 isValid = false;
-            } else {
-                showSuccess('loginPassword');
+            }
+
+            const existingUsers = JSON.parse(localStorage.getItem('users') || '[]');
+            const user = existingUsers.find(u => u.email === email && u.password === password);
+
+            if (!user) {
+                showError('loginEmail', 'Invalid email or password');
+                showError('loginPassword', 'Invalid email or password');
+                isValid = false;
             }
 
             if (isValid) {
                 const loginBtn = document.getElementById('loginBtn');
-                loginBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Logging in...';
+                loginBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Signing In...';
                 loginBtn.disabled = true;
 
                 setTimeout(() => {
-                    alert('Login successful! Redirecting to portal...');
-                    localStorage.setItem('isLoggedIn', 'true');
-                    localStorage.setItem('userEmail', email);
-
-                    const existingUsers = JSON.parse(localStorage.getItem('users') || '[]');
-                    const user = existingUsers.find(u => u.email === email || u.phone === email);
-                    if (user) {
-                        localStorage.setItem('userName', user.name);
-                        localStorage.setItem('userPhone', user.phone);
-                        localStorage.setItem('joinDate', new Date().toLocaleDateString());
-                    }
-
-                    window.location.href = 'portal.html';
+                    localStorage.setItem('currentUser', JSON.stringify(user));
+                    alert('Login successful! Welcome back!');
+                    window.location.href = 'index.html';
                 }, 1500);
             }
         }
