--- a/signup.html
+++ b/signup.html
@@ -6,69 +6,184 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup - Harsh IT Solutions</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="professional-logo.css">
+    <script src="advanced-security.js"></script>
+    <script src="signup-security.js"></script>
     <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            font-family: 'Poppins', sans-serif;
+        }
+        
         .auth-section {
-            min-height: 100vh;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            display: flex;
+            display: flex !important;
             align-items: center;
             justify-content: center;
-            padding: 20px;
         }
 
         .auth-container {
-            background: var(--bg-card);
-            border-radius: 20px;
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 25px;
+            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(255, 255, 255, 0.2);
+            width: 90vw;
+            max-width: 420px;
+            max-height: 90vh;
             overflow: hidden;
-            width: 100%;
-            max-width: 900px;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            min-height: 600px;
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         .auth-form {
-            padding: 60px 40px;
+            padding: 30px;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
+            text-align: center;
+            min-height: 100%;
+            max-height: 90vh;
+            overflow: hidden;
         }
 
-        .auth-info {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 60px 40px;
+        /* Professional Logo Styles */
+        .professional-logo {
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .chip-container {
+            position: relative;
+            width: 50px;
+            height: 50px;
+        }
+
+        .chip-body {
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, #2563eb, #1e40af);
+            border-radius: 8px;
+            position: relative;
+            box-shadow: 0 4px 15px rgba(37, 99, 235, 0.3);
+            overflow: hidden;
+        }
+
+        .circuit-lines {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: 
+                linear-gradient(90deg, transparent 48%, rgba(255,255,255,0.3) 49%, rgba(255,255,255,0.3) 51%, transparent 52%),
+                linear-gradient(0deg, transparent 48%, rgba(255,255,255,0.3) 49%, rgba(255,255,255,0.3) 51%, transparent 52%);
+        }
+
+        .chip-core {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 20px;
+            height: 20px;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 3px;
+            box-shadow: inset 0 1px 3px rgba(0,0,0,0.2);
+        }
+
+        .chip-pins {
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
+            border: 2px solid #1e40af;
+            border-radius: 10px;
+        }
+
+        .chip-pins::before,
+        .chip-pins::after {
+            content: '';
+            position: absolute;
+            background: #1e40af;
+        }
+
+        .chip-pins::before {
+            top: 8px;
+            left: -4px;
+            width: 4px;
+            height: 8px;
+            box-shadow: 0 16px 0 #1e40af, 0 32px 0 #1e40af;
+        }
+
+        .chip-pins::after {
+            top: 8px;
+            right: -4px;
+            width: 4px;
+            height: 8px;
+            box-shadow: 0 16px 0 #1e40af, 0 32px 0 #1e40af;
+        }
+
+        .brand-text {
             text-align: center;
         }
 
+        .brand-name {
+            display: block;
+            font-size: 1.1rem;
+            font-weight: 700;
+            color: var(--primary-color);
+            margin-bottom: 2px;
+        }
+
+        .brand-tagline {
+            display: block;
+            font-size: 0.7rem;
+            color: var(--text-secondary);
+            font-weight: 500;
+        }
+
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 12px;
+            width: 100%;
         }
 
         .form-group label {
             display: block;
-            margin-bottom: 8px;
-            font-weight: 500;
-            color: var(--text-primary);
+            margin-bottom: 5px;
+            font-weight: 600;
+            color: #1e293b;
+            font-size: 0.85rem;
+            text-align: left;
         }
 
         .form-group input {
             width: 100%;
-            padding: 15px;
-            border: 2px solid var(--border-color);
-            border-radius: 10px;
-            font-size: 1rem;
+            padding: 12px 16px;
+            border: 2px solid #e2e8f0;
+            border-radius: 12px;
+            font-size: 0.9rem;
             transition: all 0.3s ease;
+            box-sizing: border-box;
+            background: rgba(255, 255, 255, 0.8);
+            color: #1e293b;
         }
 
         .form-group input:focus {
             outline: none;
-            border-color: var(--primary-color);
+            border-color: #3b82f6;
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+            background: rgba(255, 255, 255, 1);
         }
 
         .form-group input.error {
@@ -107,28 +222,36 @@
 
         .auth-btn {
             width: 100%;
-            padding: 15px;
-            background: var(--gradient-primary);
+            padding: 14px;
+            background: linear-gradient(135deg, #3b82f6, #1e40af);
             color: white;
             border: none;
-            border-radius: 10px;
-            font-size: 1rem;
+            border-radius: 12px;
+            font-size: 0.95rem;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
-            margin-bottom: 20px;
+            margin: 18px 0 12px 0;
+            box-sizing: border-box;
+            box-shadow: 0 4px 15px rgba(59, 130, 246, 0.3);
         }
 
         .auth-btn:hover {
             transform: translateY(-2px);
-            box-shadow: var(--shadow-lg);
+            box-shadow: 0 8px 25px rgba(59, 130, 246, 0.4);
         }
 
         .login-link {
             text-align: center;
-            color: var(--primary-color);
+            color: #3b82f6;
             text-decoration: none;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
+            font-weight: 500;
+        }
+
+        .login-link:hover {
+            color: #1e40af;
+            text-decoration: underline;
         }
 
         .brand-logo {
@@ -155,31 +278,14 @@
         }
 
         @media (max-width: 768px) {
-            .auth-section {
-                padding: 10px;
-                align-items: flex-start;
-                /* Better for scrolling on small screens */
-            }
-
             .auth-container {
-                grid-template-columns: 1fr;
-                margin-top: 20px;
-                margin-bottom: 20px;
-            }
-
-            .auth-info {
-                /* order: -1; Removed to keep form at top */
-                padding: 30px 20px;
-                border-radius: 0 0 20px 20px;
+                width: 90vw;
+                max-width: 350px;
+                margin: 0 20px;
             }
 
             .auth-form {
-                padding: 30px 20px;
-                border-radius: 20px 20px 0 0;
-            }
-
-            .brand-logo {
-                font-size: 1.5rem;
+                padding: 25px 20px;
             }
         }
     </style>
@@ -189,29 +295,44 @@
     <section class="auth-section">
         <div class="auth-container">
             <div class="auth-form">
-                <h2>Create Account</h2>
-                <p style="color: var(--text-secondary); margin-bottom: 30px;">Join us to track your repairs</p>
+                <div style="text-align: center; margin-bottom: 16px;">
+                    <div class="logo-container" style="justify-content: center;">
+                        <div class="logo-icon">
+                            <div class="chip-design">
+                                <div class="chip-core"></div>
+                                <div class="chip-pins"></div>
+                            </div>
+                            <div class="logo-accent">⚡</div>
+                        </div>
+                        <div>
+                            <div class="brand-name" style="font-size: 1.2rem;">HARSH</div>
+                            <div class="brand-suffix" style="font-size: 0.7rem;">IT SOLUTIONS</div>
+                        </div>
+                    </div>
+                </div>
+                <h2 style="margin-bottom: 6px; font-size: 1.4rem; text-align: center; color: #1e293b; font-weight: 700;">Create Account</h2>
+                <p style="color: #64748b; margin-bottom: 20px; font-size: 0.85rem; text-align: center;">Join us to track your repairs</p>
 
-                <form onsubmit="handleRegister(event)">
+                <form onsubmit="handleRegister(event)" autocomplete="off">
                     <div class="form-group">
                         <label>Full Name</label>
-                        <input type="text" name="name" id="regName" placeholder="Enter your full name" required>
+                        <input type="text" name="name" id="regName" placeholder="Enter your full name" required autocomplete="off">
                         <div class="error-message" id="regNameError"></div>
                     </div>
                     <div class="form-group">
                         <label>Phone Number</label>
-                        <input type="tel" name="phone" id="regPhone" placeholder="Enter phone number" required>
+                        <input type="tel" name="phone" id="regPhone" placeholder="Enter phone number" required autocomplete="off">
                         <div class="error-message" id="regPhoneError"></div>
                     </div>
                     <div class="form-group">
                         <label>Email Address</label>
-                        <input type="email" name="email" id="regEmail" placeholder="Enter email address" required>
+                        <input type="email" name="email" id="regEmail" placeholder="Enter email address" required autocomplete="off">
                         <div class="error-message" id="regEmailError"></div>
                     </div>
                     <div class="form-group">
                         <label>Password</label>
                         <input type="password" name="password" id="regPassword" placeholder="Create a password"
-                            required>
+                            required autocomplete="new-password">
                         <div class="password-strength" id="passwordStrength"></div>
                         <div class="error-message" id="regPasswordError"></div>
                     </div>
@@ -220,26 +341,9 @@
                     </button>
                 </form>
                 <a href="login.html" class="login-link">Already have an account? Login here</a>
-            </div>
-
-            <div class="auth-info">
-                <div class="brand-logo">
-                    <i class="fas fa-microchip"></i>
-                    <span>Harsh IT Solutions</span>
-                </div>
-                <h3>Professional IT Services</h3>
-                <p>Create your account to access our customer portal and track your repairs.</p>
-
-                <ul class="info-features">
-                    <li><i class="fas fa-search"></i> Track repair status</li>
-                    <li><i class="fas fa-history"></i> View service history</li>
-                    <li><i class="fas fa-file-invoice"></i> Download invoices</li>
-                    <li><i class="fas fa-calendar"></i> Book new services</li>
-                    <li><i class="fas fa-user-cog"></i> Manage profile</li>
-                </ul>
-
-                <div style="margin-top: 30px;">
-                    <a href="index.html" style="color: white; text-decoration: none;">
+                
+                <div style="text-align: center; margin-top: 10px;">
+                    <a href="index.html" style="color: #3b82f6; text-decoration: none; font-size: 0.8rem; font-weight: 500;">
                         <i class="fas fa-arrow-left"></i> Back to Website
                     </a>
                 </div>
